--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TMDBmvvm</string>
+    <string name="tv_shows">TV SHOWS</string>
+    <string name="movies">MOVIES</string>
+    <string name="artist">ARTIST</string>
 </resources>
