--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="tv_shows">TV SHOWS</string>
     <string name="movies">MOVIES</string>
     <string name="artist">ARTIST</string>
+    <string name="update">update</string>
 </resources>
